# rhizome

./: .gitignore  build.sh  pyproject.toml
src/rhizome/: main.py
src/rhizome.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rhizome/data/: settings.toml
src/rhizome/game/: caves.py  components.py  entities.py  logging.py  maps.py  state_manager.py  states.py  strategies.py  systems.py  tags.py  ui_manager.py  ui_states.py  world.py
tests/: test_camera.py  test_caves.py  test_logging.py  test_pathfinding.py
