[project]
name = "rhizome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "pytest>=8.3.5",
    "tcod>=16.2.3",
    "tcod-ecs>=5.2.3",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]